socketIOでのチャットの入力と受け取りと送信を作成

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         $('#m').val('');
         return false;
       });
+      socket.on('message', function(msg){
+        console.log(msg);
+        $('#messages').append($('<li>').text(msg));
+      });
     </script>
   </body>
 </html>
