--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
     <script>
+      //socketioを使いserverにconnectする
       var socket = io();
       $('form').submit(function(){
+        //サーバーに指定したイベント名にリクエストを送る
         socket.emit('message', $('#m').val());
         $('#m').val('');
         return false;
       });
+      //サーバーからの指定のイベントを受け取れるようにcallbackを登録する
       socket.on('message', function(msg){
         console.log(msg);
         $('#messages').append($('<li>').text(msg));
